--- a/Translation/PRP_en_ru.xml
+++ b/Translation/PRP_en_ru.xml
@@ -32,12 +32,6 @@
       <Dest>Канализация Мальдена</Dest>
     </String>
     <String List="0">
-      <EDID>DLC01LairHoldingCell</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>DLC01 Holding Cell</Source>
-      <Dest>DLC01: камера</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC03NorthwoodRidgeQuarry01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Northwood Ridge Quarry</Source>
@@ -90,18 +84,6 @@
       <REC>CELL:FULL</REC>
       <Source>Warehouse</Source>
       <Dest>Склад</Dest>
-    </String>
-    <String List="0">
-      <EDID>WarehouseGunTraps</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>TrapGunPackins</Source>
-      <Dest>TrapGunPackins</Dest>
-    </String>
-    <String List="0">
-      <EDID>DebugRange</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Ячейка для быстрого теста</Dest>
     </String>
     <String List="0">
       <EDID>GraygardenHomestead01</EDID>
@@ -176,6 +158,12 @@
       <Dest>Башня замка Ядер-Короля</Dest>
     </String>
     <String List="0">
+      <EDID>DLC04NWJunkyardUFO01</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Ultimate UFO</Source>
+      <Dest>СверхНЛО</Dest>
+    </String>
+    <String List="0">
       <EDID>ShawHighSchool01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Shaw High School</Source>
@@ -192,6 +180,12 @@
       <REC>CELL:FULL</REC>
       <Source>Layton Towers</Source>
       <Dest>Лейтон тауэрс</Dest>
+    </String>
+    <String List="0">
+      <EDID>ElevTransHiTechInstitute</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Elevator</Source>
+      <Dest>Лифт</Dest>
     </String>
     <String List="0">
       <EDID>DLC01Lair01</EDID>
@@ -276,12 +270,6 @@
       <REC>CELL:FULL</REC>
       <Source>College Square Station</Source>
       <Dest>Станция &quot;Колледж-Сквер&quot;</Dest>
-    </String>
-    <String List="0">
-      <EDID>WarehouseAmbushes</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Ячейка для быстрого теста</Dest>
     </String>
     <String List="0">
       <EDID>DmndStandsTaphouse01</EDID>
@@ -446,12 +434,6 @@
       <Dest>Подвал &quot;Вим!&quot;</Dest>
     </String>
     <String List="0">
-      <EDID>DLC04WarehouseAmbush</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Ambush Warehouse Cell</Source>
-      <Dest>Ambush Warehouse Cell</Dest>
-    </String>
-    <String List="0">
       <EDID>RevereBeachStation01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Revere Beach Station</Source>
@@ -491,7 +473,7 @@
       <EDID>SuperDuperMart01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Super-Duper Mart</Source>
-      <Dest>Супер-Дупер-Март</Dest>
+      <Dest>Супермаркет</Dest>
     </String>
     <String List="0">
       <EDID>NationalGuardTrainingYard01</EDID>
@@ -516,12 +498,6 @@
       <REC>CELL:FULL</REC>
       <Source>Dartmouth Professional Building</Source>
       <Dest>Офисное здание Дармута</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedFalloutShelter02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Shelter</Source>
-      <Dest>Укрытие</Dest>
     </String>
     <String List="0">
       <EDID>DmndChoiceChops01</EDID>
@@ -578,12 +554,6 @@
       <Dest>Главная палуба &quot;Придвена&quot;</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedTheaterLaundromat</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Ячейка для быстрого теста</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04GZVaultTec01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Vault-Tec: Among the Stars</Source>
@@ -594,6 +564,12 @@
       <REC>CELL:FULL</REC>
       <Source>The Castle Tunnels</Source>
       <Dest>Тоннели Замка</Dest>
+    </String>
+    <String List="0">
+      <EDID>ElevTransVault</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Elevator</Source>
+      <Dest>Лифт</Dest>
     </String>
     <String List="0">
       <EDID>RelayTowerInt14</EDID>
@@ -644,12 +620,6 @@
       <Dest>Подуровень Института 21-D</Dest>
     </String>
     <String List="0">
-      <EDID>DLC03FringeCoveDocks01</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Ячейка для быстрого теста</Dest>
-    </String>
-    <String List="0">
       <EDID>DLC04TransitCenter01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Nuka-World Transit Center</Source>
@@ -660,12 +630,6 @@
       <REC>CELL:FULL</REC>
       <Source>Cappy&apos;s Cafe</Source>
       <Dest>Кафе Мистера Крышки</Dest>
-    </String>
-    <String List="0">
-      <EDID>DebugJPSA</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Companion Situational Awareness</Source>
-      <Dest>Оценка ситуации спутником</Dest>
     </String>
     <String List="0">
       <EDID>PrydwenHull03</EDID>
@@ -698,12 +662,6 @@
       <Dest>Укрытие</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseIndustrialMachines</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>The Incredible Machines</Source>
-      <Dest>Невероятные механизмы</Dest>
-    </String>
-    <String List="0">
       <EDID>DmndDugoutInn01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Dugout Inn</Source>
@@ -714,12 +672,6 @@
       <REC>CELL:FULL</REC>
       <Source>Cambridge Police Station</Source>
       <Dest>Кембриджский полицейский участок</Dest>
-    </String>
-    <String List="0">
-      <EDID>REHoldingCell</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Ячейка для быстрого теста</Dest>
     </String>
     <String List="0">
       <EDID>MiltonGeneral01</EDID>
@@ -770,6 +722,12 @@
       <Dest>Хьюбрис Комикс</Dest>
     </String>
     <String List="0">
+      <EDID>ElevMinUseTransUtil</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Elevator</Source>
+      <Dest>Лифт</Dest>
+    </String>
+    <String List="0">
       <EDID>WaldenPond01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Gift Shop Basement</Source>
@@ -797,13 +755,7 @@
       <EDID>zLexingtonGarage</EDID>
       <REC>CELL:FULL</REC>
       <Source>Lexington Parking Garage</Source>
-      <Dest>Лексингтонский парковочный гараж</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedSubwayTerminalShowcase</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Terminals &amp; Holotapes, Oh My.</Source>
-      <Dest>Терминалы и голозаписи, о боже.</Dest>
+      <Dest>Лексингтонская парковка</Dest>
     </String>
     <String List="0">
       <EDID>DLC04SafariWelcomeCenter</EDID>
@@ -954,12 +906,6 @@
       <REC>CELL:FULL</REC>
       <Source>Institute Advanced Systems</Source>
       <Dest>Институт - отдел высших систем</Dest>
-    </String>
-    <String List="0">
-      <EDID>WarehouseMusic</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Ячейка для быстрого теста</Dest>
     </String>
     <String List="0">
       <EDID>Vault81Secret</EDID>
@@ -1124,10 +1070,22 @@
       <Dest>Церковь Троицы</Dest>
     </String>
     <String List="0">
+      <EDID>ElevTransHiTech</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Elevator</Source>
+      <Dest>Лифт</Dest>
+    </String>
+    <String List="0">
       <EDID>DmndWaterfrontSunsHouse01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Doctor Sun&apos;s House</Source>
       <Dest>Дом доктора Суна</Dest>
+    </String>
+    <String List="0">
+      <EDID>ElevTransUtil</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Elevator</Source>
+      <Dest>Лифт</Dest>
     </String>
     <String List="0">
       <EDID>DmndPembrokesHouse01</EDID>
@@ -1190,12 +1148,6 @@
       <Dest>Кегельбан</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedGrenades</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Cellar</Source>
-      <Dest>Подвал</Dest>
-    </String>
-    <String List="0">
       <EDID>TheaterMassBayMedicalCenter01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Mass Bay Medical Center</Source>
@@ -1212,12 +1164,6 @@
       <REC>CELL:FULL</REC>
       <Source>Fizztop Grille</Source>
       <Dest>Гриль-бар &quot;Физзтоп&quot;</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedCave</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Breakheart Banks</Source>
-      <Dest>Брейкхарт-Бэнкс</Dest>
     </String>
     <String List="0">
       <EDID>ShenleysOysterBar01</EDID>
@@ -1272,12 +1218,6 @@
       <REC>CELL:FULL</REC>
       <Source>Old Robotics</Source>
       <Dest>Олд-роботикс</Dest>
-    </String>
-    <String List="0">
-      <EDID>zUnusedFinancial23</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Atlantic Offices</Source>
-      <Dest>Офисы &quot;Атлантик&quot;</Dest>
     </String>
     <String List="0">
       <EDID>GwinnettBrewery02</EDID>
@@ -1418,12 +1358,6 @@
       <Dest>Психиатрическая больница &quot;Парсонс&quot;</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedCellar02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Cellar</Source>
-      <Dest>Подвал</Dest>
-    </String>
-    <String List="0">
       <EDID>zLexingtonLaundromat</EDID>
       <REC>CELL:FULL</REC>
       <Source>Lexington Laundromat</Source>
@@ -1464,12 +1398,6 @@
       <REC>CELL:FULL</REC>
       <Source>Listening Post Bravo</Source>
       <Dest>Пост наблюдения &quot;Браво&quot;</Dest>
-    </String>
-    <String List="0">
-      <EDID>QASmoke</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Tunnels</Source>
-      <Dest>Тоннели</Dest>
     </String>
     <String List="0">
       <EDID>LongneckLukowskis01</EDID>
@@ -1550,12 +1478,6 @@
       <Dest>Убежище 95</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseWorkbenches</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Workbench Bonanza</Source>
-      <Dest>Изобилие верстаков</Dest>
-    </String>
-    <String List="0">
       <EDID>WestonWaterTreatment01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Weston Water Treatment Plant</Source>
@@ -1566,6 +1488,12 @@
       <REC>CELL:FULL</REC>
       <Source>Ticker Tape Lounge</Source>
       <Dest>Бар &quot;Лента новостей&quot;</Dest>
+    </String>
+    <String List="0">
+      <EDID>MassFusion02Trans</EDID>
+      <REC>CELL:FULL</REC>
+      <Source>Mass Fusion Elevator</Source>
+      <Dest>Лифт &quot;Масс фьюжн&quot;</Dest>
     </String>
     <String List="0">
       <EDID>InstituteBioScience</EDID>
@@ -1652,10 +1580,10 @@
       <Dest>Уровни &quot;Мед-Тек&quot;</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseClutter</EDID>
+      <EDID>ElevTransPub</EDID>
       <REC>CELL:FULL</REC>
-      <Source>Workbench Bonanza</Source>
-      <Dest>Изобилие верстаков</Dest>
+      <Source>Elevator</Source>
+      <Dest>Лифт</Dest>
     </String>
     <String List="0">
       <EDID>CovenantHQ01</EDID>
@@ -1793,7 +1721,7 @@
       <EDID>zPOIJoel06</EDID>
       <REC>CELL:FULL</REC>
       <Source>Electrical Hobbyist&apos;s Club Cellar</Source>
-      <Dest>Подвал клуба любителей электротехники</Dest>
+      <Dest>Подвал клуба любителей электроники</Dest>
     </String>
     <String List="0">
       <EDID>DLC03POI40Int</EDID>
@@ -1856,12 +1784,6 @@
       <Dest>Старая Северная церковь</Dest>
     </String>
     <String List="0">
-      <EDID>zUnusedTheater46A</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Ячейка для быстрого теста</Dest>
-    </String>
-    <String List="0">
       <EDID>CambridgeChurchGraveyard01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Union&apos;s Hope Cathedral</Source>
@@ -1892,12 +1814,6 @@
       <Dest>35 Корт</Dest>
     </String>
     <String List="0">
-      <EDID>WarehouseBathrooms</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Ячейка для быстрого теста</Dest>
-    </String>
-    <String List="0">
       <EDID>CharlestownLaundry</EDID>
       <REC>CELL:FULL</REC>
       <Source>Charlestown Laundry</Source>
@@ -1922,12 +1838,6 @@
       <Dest>Подвал больницы &quot;Парсонс&quot;</Dest>
     </String>
     <String List="0">
-      <EDID>Vault111Start</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Vault 111 Main Entrance</Source>
-      <Dest>Главный вход в Убежище 111</Dest>
-    </String>
-    <String List="0">
       <EDID>DmndRadio01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Diamond City Radio</Source>
@@ -1944,12 +1854,6 @@
       <REC>CELL:FULL</REC>
       <Source>D.B. Technical High School</Source>
       <Dest>Политехническая школа Центрального Бостона</Dest>
-    </String>
-    <String List="0">
-      <EDID>CombatZone02</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>Quick Test Cell</Source>
-      <Dest>Ячейка для быстрого теста</Dest>
     </String>
     <String List="0">
       <EDID>DLC03AlderseaDaySpa01</EDID>
@@ -2010,12 +1914,6 @@
       <REC>CELL:FULL</REC>
       <Source>Apartments</Source>
       <Dest>Жилой дом</Dest>
-    </String>
-    <String List="0">
-      <EDID>WarehouseTraps</EDID>
-      <REC>CELL:FULL</REC>
-      <Source>The most dangerous cell</Source>
-      <Dest>Самая опасная камера</Dest>
     </String>
     <String List="0">
       <EDID>DmndGreenhouse01</EDID>
